@@ -8,7 +8,7 @@ version          = 0.02_01
 ; authordep Dist::Zilla::Plugin::Alien
 
 [@Author::Plicease]
-:version              = 1.93
+:version              = 1.94
 travis_status         = 1
 release_tests         = 1
 installer             = Alien
@@ -20,11 +20,29 @@ alien_build_command   = %{patch} -p1 < ../../patches/sindhi.diff
 alien_build_command   = %c --prefix=%s
 alien_build_command   = make
 alien_isolate_dynamic = 1
+irc                   = irc://irc.perl.org/#native
+
+diag_preamble = | $post_diag = sub
+diag_preamble = | {
+diag_preamble = |   eval {
+diag_preamble = |     require Alien::Hunspell;
+diag_preamble = |     diag 'Alien::Hunspell->cflags = ' . Alien::Hunspell->cflags;
+diag_preamble = |     diag 'Alien::Hunspell->libs   = ' . Alien::Hunspell->libs;
+diag_preamble = |   };
+diag_preamble = |   eval {
+diag_preamble = |     require ExtUtils::CppGuess;
+diag_preamble = |     my %cppguess = ExtUtils::CppGuess->new->module_build_options;
+diag_preamble = |     diag 'C++ Guess compiler      = ' . $cppguess{extra_compiler_flags};
+diag_preamble = |     diag 'C++ Guess linker        = ' . $cppguess{extra_linker_flags};
+diag_preamble = |   };
+diag_preamble = | };
 
 [RemovePrereqs]
 remove = strict
 remove = warnings
 remove = base
+remove = ExtUtils::CppGuess
+remove = Text::ParseWords
 
 ;[Prereqs]
 ;Foo::Bar = 0
